Major update to ditch orientdb and adopt arcadedb, and ditch angular in favor of htmx/hyperscript - work in progress but it does compile and run